deploy/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: skarim
  labels:
    name: skarim
