deploy/auctionlifecycle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auctionlifecycle
  labels:
    app: auctionlifecycle
spec:
  type: ClusterIP
  selector:
    app: auctionlifecycle
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
      name: http
