deploy/bidding-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bidding
  labels:
    app: bidding
spec:
  type: ClusterIP
  selector:
    app: bidding
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
      name: http
